[tool.poetry]
authors = ["Lee Tirrell <ltirrell@corticometrics.com>"]
description = "An inviting place for interoperable reporting of medical imaging data"
license = "BSD-3-Clause"
name = "hearth"
repository = "https://github.com/corticometrics/hearth"
version = "0.1.0"

[tool.poetry.dependencies]
Jinja2 = "^3.0.2"
click = "^8.0.3"
docker = "^5.0.3"
numpy = "^1.21.3"
pandas = "^1.3.4"
pydicom = "^2.2.2"
python = ">=3.7.1,<3.11"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
ipython = "^7.28.0"
jupyter = "^1.0.0"
pytest = "^5.2"

[tool.poetry.scripts]
hearth = "hearth.cli:cli"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
